--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
             </a>
         </li>
         </ul>
-        <button type="submit" id="logout" (click)="Logout()" class="btn btn-info btn-fill btn-wd">Logout</button>
+        <button type="submit" id="logout" (click)="logout()" class="btn btn-info btn-fill btn-wd">Logout</button>
 </div>
 
 <style>
