--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -21,9 +21,6 @@
                 <hr>
                 <div class="text-center">
                     <div class="row">
-                        <!--<div class="col-md-3 col-md-offset-1">
-                            <h5>25<br /><small>Pesagens</small></h5>
-                        </div>-->
                         <div class="col-md-4" *ngIf="login.status!='true'">
                             <h5>Status<br /><small>Inativo</small></h5>
                         </div>
@@ -41,12 +38,12 @@
                     <h4 class="title">Editar Perfil</h4>
                 </div>
                 <div class="content">
-                    <form>
+                    <form #cadastro="ngForm" novalidate>
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label>Nome Completo</label>
-                                    <input type="text" class="form-control border-input" placeholder="Nome Completo" value="{{login.nome}}">
+                                    <input type="text" class="form-control border-input" placeholder="Nome Completo" name="nome" id="nome" [(ngModel)]="nome" required>
                                 </div>
                             </div>
                         </div>
@@ -54,13 +51,13 @@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <label>Senha</label>
-                                    <input type="password" class="form-control border-input" placeholder="Senha" value="{{login.senha}}">
+                                    <input type="password" class="form-control border-input" placeholder="Senha" name="senha" id="senha" [(ngModel)]="senha" required >
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Email</label>
-                                    <input type="email" class="form-control border-input" placeholder="Email" value="{{login.email}}">
+                                    <input type="email" class="form-control border-input" placeholder="Email" name="email" id="email" [(ngModel)]="email" required >
                                 </div>
                             </div>
                         </div>
@@ -69,35 +66,25 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label>Altura(cm)</label>
-                                    <input type="number" class="form-control border-input" placeholder="Altura" value="{{login.altura}}">
+                                    <input type="number" class="form-control border-input" placeholder="Altura" name="altura" id="altura" [(ngModel)]="altura" required>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label>Peso(kg)</label>
-                                    <input type="number" class="form-control border-input" placeholder="Peso" value="{{login.peso}}">
+                                    <input type="number" class="form-control border-input" placeholder="Peso" name="peso" id="peso" [(ngModel)]="peso" required>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label>Data de Nascimento</label>
-                                    <input class="form-control border-input" placeholder="Data de Nascimento" value="{{login.datanascimento}}">
+                                    <input class="form-control border-input" placeholder="Data de Nascimento" name="datanascimento" id="datanascimento" [(ngModel)]="datanascimento" required >
                                 </div>
                             </div>
                         </div>
 
-                       <!-- <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label>Sobre você</label>
-                                    <textarea rows="5" class="form-control border-input" placeholder="Descreva-o">
-IRINEU, se você não sabe nem eu</textarea>
-                                </div>
-                            </div>
-                        </div> -->
                         <div class="text-center">
-                            <!--<button type="submit" (click)="editar()" class="btn btn-info btn-fill btn-wd">Atualizar Perfil</button>-->
-                            <button type="submit" (click)="editar()" class="btn btn-info btn-fill btn-wd">Atualizar Perfil</button>
+                            <button type="submit" (click)="editar()" [disabled]="!cadastro.valid" class="btn btn-info btn-fill btn-wd">Atualizar Perfil</button>
                         </div>
                         <div class="clearfix"></div>
                     </form>
