--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,42 +1,13 @@
+<div class="alert alert-success" *ngIf="editar_ok">
+  <strong>Cadastro alterado com sucesso! </strong>
+</div>
+<div class="alert alert-danger" *ngIf="editar_erro">
+  <strong>Opa!</strong> Aconteceu um erro ao tentar alterar os dados. Aguarde alguns instantes e tente novamente.
+</div>
 <div *ngFor="let login of auth; let i = index" class="container-fluid">
     <div class="row">
-        <div class="col-lg-4 col-md-5">
-            <div class="card card-user">
-                <div class="image">
-                    <img src="assets/img/background.jpg" alt="..."/>
-                </div>
-                <div class="content">
-                    <div class="author">
-                      <img class="avatar border-white" src="assets/img/faces/face-2.jpg" alt="..."/>
-                      <h4 class="title">{{login.nome}}<br />
-                         <a href="#"><small>@gustavosouza</small></a>
-                      </h4>
-                    </div>
-                    <p class="description text-center">
-                        "IRINEU<br>
-                        Se você não sabe  <br>
-                        NEM EU "
-                    </p>
-                </div>
-                <hr>
-                <div class="text-center">
-                    <div class="row">
-                        <div class="col-md-4" *ngIf="login.status!='true'">
-                            <h5>Status<br /><small>Inativo</small></h5>
-                        </div>
-
-                        <div class="col-md-4" *ngIf="login.status=='true'">
-                            <h5>Status<br /><small>Ativo</small></h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="col-lg-8 col-md-7">
             <div class="card">
-                <div class="header">
-                    <h4 class="title">Editar Perfil</h4>
-                </div>
                 <div class="content">
                     <form #cadastro="ngForm" novalidate>
                         <div class="row">
